test/tests/compiler/13_floating-point_numbers/invalid_types/mod_double_2.plx
pub fn main(none) i32 {
    #  You can't apply the modulo operator to a double 
    e: f64 = 3.0 % 5
    return 0
}
